--- a/package.json
+++ b/package.json
@@ -26,9 +26,15 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.5.2"
   },
   "engines": {
-		"node": ">=18.0.0"
-	  }
+    "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.0.3",
+    "semantic-ui-react": "^2.1.5"
+  }
 }
