--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
 		"clean": "gatsby clean"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.1.0",
 		"@fontsource/inter": "^4.5.2",
 		"@fontsource/poppins": "^4.5.1",
 		"@portabletext/react": "^1.0.2",
@@ -38,7 +39,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
-		"react-icons": "^4.3.1",
+		"react-icons": "^4.12.0",
 		"react-slick": "^0.29.0",
 		"react-syntax-highlighter": "^15.4.5",
 		"react-use-flexsearch": "^0.1.1",
