--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "techhub.blog",
+  "name": "fatwo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "shaif arfan",
+  "author": "Abdiwali eid",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
