--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.3",
+    "react-bootstrap": "^2.10.1",
+    "react-toastify": "^10.0.4",
     "semantic-ui-react": "^2.1.5"
   }
 }
