--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "author": "Abdiwali eid",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.16.3",
-    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-react": "^7.23.3",
     "@types/node": "16.11.12",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -33,6 +33,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "babel-plugin-lodash": "^3.3.4",
     "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.3",
