--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
 		"@sanity/asset-utils": "^1.2.3",
 		"axios": "^0.26.0",
 		"babel-plugin-styled-components": "^2.0.2",
+		"bootstrap": "^5.3.2",
 		"clsx": "^1.1.1",
 		"date-fns": "^2.28.0",
 		"disqus-react": "^1.1.5",
@@ -37,6 +38,7 @@
 		"gatsby-transformer-sharp": "^4.6.0",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
+		"react-bootstrap": "^2.10.1",
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^4.12.0",
